[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Fonts/upheavtt.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Sprites/Sprite1.png" type="Texture" id=2]
[ext_resource path="res://Scripts/PauseUi.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 112
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="DynamicFont" id=13]
size = 48
font_data = ExtResource( 1 )

[node name="PauseUi" type="Node2D"]
pause_mode = 2
script = ExtResource( 3 )

[node name="PauseButton" type="Button" parent="."]
pause_mode = 2
margin_left = 14.983
margin_top = 11.2348
margin_right = 159.983
margin_bottom = 55.2348
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Pause"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Control" parent="."]
pause_mode = 2
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Pause"]
position = Vector2( 360, 240 )
scale = Vector2( 30, 20 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="Pause/Sprite"]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="Pause"]
margin_left = 233.959
margin_top = 51.6735
margin_right = 568.959
margin_bottom = 256.674
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = SubResource( 7 )
text = "Pause
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="Pause"]
margin_left = 220.663
margin_top = 198.543
margin_right = 562.663
margin_bottom = 248.544
rect_scale = Vector2( 0.75, 0.75 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
text = "> continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Home" type="Button" parent="Pause"]
margin_left = 226.326
margin_top = 251.4
margin_right = 568.326
margin_bottom = 301.401
rect_scale = Vector2( 0.75, 0.75 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
text = "> exit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="Pause/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Pause/Home" to="." method="_on_Home_pressed"]
